验证base64图片上传功能